objects/Reference__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status_Date__c</fullName>
        <inlineHelpText>Date of Approval to Vet status change</inlineHelpText>
        <label>Approval Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Reason__c</fullName>
        <label>Approval Status Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_to_Vet__c</fullName>
        <label>Approval to Vet</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_A__c</fullName>
        <label>Attribute A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_B__c</fullName>
        <label>Attribute B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_C__c</fullName>
        <label>Attribute C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_D__c</fullName>
        <label>Attribute D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_E__c</fullName>
        <label>Attribute E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_F__c</fullName>
        <label>Attribute F</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_G__c</fullName>
        <label>Attribute G</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_H__c</fullName>
        <label>Attribute H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_I__c</fullName>
        <label>Attribute I</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_J__c</fullName>
        <label>Attribute J</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>Reference_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dedicated Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF( 
  OR( ISPICKVAL( Reference_Status__c , &quot;Pending&quot;), ISPICKVAL( Reference_Status__c , &quot;Scheduled&quot;) ),
  IMAGE(&quot;/resource/AttributeIcons/tag2_yellow16.png&quot;, &apos;None&apos;),
  IF( 
    AND( ISPICKVAL( Reference_Status__c , &quot;Vetted&quot;), ISPICKVAL( Reference_Level__c , &quot;Gold Standard&quot;) ),
    IMAGE(&quot;/resource/AttributeIcons/tag2_blue16.png&quot;, &apos;None&apos;),
    IF( 
      OR( ISPICKVAL( Reference_Status__c , &quot;Vetted&quot;), ISPICKVAL( Reference_Status__c , &quot;Ambassador&quot;) ),
      IMAGE(&quot;/resource/AttributeIcons/tag2_green16.png&quot;, &apos;None&apos;),
      IF( 
        OR( ISPICKVAL( Reference_Status__c , &quot;Unqualified&quot;), ISPICKVAL( Reference_Status__c , &quot;Former&quot;) ),
        IMAGE(&quot;/resource/AttributeIcons/tag2_red16.png&quot;, &apos;None&apos;),
        null
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Reference_Level__c</fullName>
        <label>Former Reference Level</label>
        <picklist>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <formula>CASE( Reference_Level__c , 
  &quot;Pipeline&quot;, 1, 
  &quot;Gold Standard&quot;, 2,
  &quot;Ambassador&quot;, 3, 
  0
)</formula>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_Formal_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Institution__c, Institution__r.Account_Formal_Name__c)</formula>
        <label>Institution Formal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>IF( ISPICKVAL( Reference_Status__c, &quot;Vetted&quot;), true, false)</formula>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Vetting_Date__c</fullName>
        <label>Last Vetting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Per_Quarter__c</fullName>
        <inlineHelpText>Maximum number of engagements per quarter for this specific product</inlineHelpText>
        <label>Max Per Quarter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Start_Date__c</fullName>
        <formula>Membership__r.Primary_Project__r.Earliest_Contract_Start_Date__c</formula>
        <label>Member Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Product__c</fullName>
        <formula>Membership__r.Program__r.Program_Abbreviation__c</formula>
        <label>Membership Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Membership must be related to the Contact&apos;s Institution.</errorMessage>
            <filterItems>
                <field>Membership__c.Account_Name__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Institution__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>Reference_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_QA_Call_Date__c</fullName>
        <description>Populate from Most Recent QA Call Date on Membership</description>
        <label>Most Recent QA Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NASA_Associate_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NASA Associate Principal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NASA_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NASA Principal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Modules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Vetting_Date__c</fullName>
        <inlineHelpText>Date when the vetting call is planned to occur</inlineHelpText>
        <label>Projected Vetting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Comments__c</fullName>
        <inlineHelpText>Enter comments as to why the Member has been selected for Reference level promotion</inlineHelpText>
        <label>Promotion Comments</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promotion_Offer_Date__c</fullName>
        <label>Promotion Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Status_Date__c</fullName>
        <description>Date the Promotion Status changed</description>
        <label>Promotion Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Status__c</fullName>
        <label>Promotion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgraded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Comments__c</fullName>
        <inlineHelpText>Enter comments to speculate what a Member would be a good reference for – Outreach, Planning, PMR, etc</inlineHelpText>
        <label>Reference Comments</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Hierarchy__c</fullName>
        <formula>CASE(Reference_Level_Display__c,
  &quot;Pipeline&quot;, 1,
  &quot;Gold Standard&quot;, 2,
  &quot;Ambassador&quot;, 3,
  0
)</formula>
        <label>Reference Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Modules4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Level_Display__c</fullName>
        <formula>IF(AND( !IsActive__c, !ISPICKVAL(Reference_Level__c, &quot;Pipeline&quot;) ),
  IF( !ISPICKVAL(Former_Reference_Level__c,&quot;&quot;), &quot;Former &quot; + TEXT(Former_Reference_Level__c), null),
  IF( ISPICKVAL(Reference_Level__c, &quot;Pipeline&quot;), &quot;Pipeline&quot;,
    IF( IsActive__c,  
      CASE(Reference_Level__c,
        &quot;Pipeline&quot;, &quot;Pipeline&quot;,
        &quot;Gold Standard&quot;, &quot;Gold Standard&quot;,
        &quot;Ambassador&quot;,  &quot;Ambassador&quot;,
		&quot;&quot;
      ),
      &quot;&quot;
    )
  )
)</formula>
        <label>Reference Level Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Level_Flag__c</fullName>
        <formula>Flag__c &amp; &quot; &quot; &amp; Reference_Level_Display__c</formula>
        <label>Reference Level Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Level_Hierarchy_Flag__c</fullName>
        <formula>Flag__c &amp; &quot; &quot; &amp;  Reference_Level_Hierarchy__c</formula>
        <label>Reference Level Hierarchy Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Level_Hierarchy__c</fullName>
        <formula>TEXT(Reference_Hierarchy__c) &amp; &quot;-&quot; &amp;  Reference_Level_Display__c</formula>
        <label>Reference Level Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Level__c</fullName>
        <label>Reference Level</label>
        <picklist>
            <picklistValues>
                <fullName>Pipeline</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Module__c</fullName>
        <label>Reference Module</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Services__c</fullName>
        <inlineHelpText>Telephone Reference: A call between a reference and another member or prospective member
Event Speaker: Reference who speaks at any Advisory Board sponsored event or industry event where they are citing their work w/ABC
Webinar: A video conference host</inlineHelpText>
        <label>Reference Services</label>
        <picklist>
            <picklistValues>
                <fullName>Event Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reference_Status__c</fullName>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Referenceable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Vetter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Vetter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Modules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <description>Created as part of CR-9191.  Used in email templates with links to VF pages.</description>
        <formula>LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)</formula>
        <label>Salesforce URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>The last time there was a change to the Reference Status field</inlineHelpText>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Comments__c</fullName>
        <label>Status Reason Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Membership Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline in Member Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor QA Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to meet Ambassador requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Modules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vetting_Comments__c</fullName>
        <label>Vetting Comments</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>All_References</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All References</label>
    </listViews>
    <listViews>
        <fullName>All_References_to_be_Vetted_This_Week</fullName>
        <columns>Reference_Module__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Projected_Vetting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Projected_Vetting_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Reference_Level__c</field>
            <operation>equals</operation>
            <value>Pipeline</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <filters>
            <field>Reference_Module__c</field>
            <operation>contains</operation>
            <value>CMA</value>
        </filters>
        <label>CMA References to be Vetted This Week</label>
    </listViews>
    <listViews>
        <fullName>All_pipeline</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Projected_Vetting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>All pipeline</label>
    </listViews>
    <listViews>
        <fullName>Ambassador_References</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Services__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Vetted</value>
        </filters>
        <filters>
            <field>Reference_Level__c</field>
            <operation>equals</operation>
            <value>Ambassador</value>
        </filters>
        <label>Ambassador References</label>
    </listViews>
    <listViews>
        <fullName>CCC_Pipeline</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Projected_Vetting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CCC</value>
        </filters>
        <label>CCC Pipeline</label>
    </listViews>
    <listViews>
        <fullName>CCC_References</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CCC</value>
        </filters>
        <label>CCC References</label>
    </listViews>
    <listViews>
        <fullName>CCM_References1</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CCC</value>
        </filters>
        <label>CCC References</label>
    </listViews>
    <listViews>
        <fullName>CCM_References2</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Approval_Status_Date__c</columns>
        <columns>Approval_Status_Reason__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Reference_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>contains</operation>
            <value>CCM</value>
        </filters>
        <label>CCM References</label>
    </listViews>
    <listViews>
        <fullName>CCM_References3</fullName>
        <columns>Member_Type__c</columns>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CCM</value>
        </filters>
        <label>CCM References</label>
    </listViews>
    <listViews>
        <fullName>CCM_References4</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CCM</value>
        </filters>
        <label>CCM References</label>
    </listViews>
    <listViews>
        <fullName>CMA_References</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CMA</value>
        </filters>
        <label>CMA References</label>
    </listViews>
    <listViews>
        <fullName>CMGA_references</fullName>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Projected_Vetting_Date__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Attribute_A__c</columns>
        <columns>Attribute_B__c</columns>
        <columns>Attribute_C__c</columns>
        <columns>Attribute_D__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CMGA</value>
        </filters>
        <label>CMGA references</label>
    </listViews>
    <listViews>
        <fullName>CMR_References</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CMR</value>
        </filters>
        <label>CMR References</label>
    </listViews>
    <listViews>
        <fullName>CPRM_References1</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CPRM</value>
        </filters>
        <label>CPRM References</label>
    </listViews>
    <listViews>
        <fullName>CQR_References1</fullName>
        <columns>NAME</columns>
        <columns>Institution_Formal_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Reference_Module__c</columns>
        <columns>Reference_Level_Flag__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Module__c</field>
            <operation>equals</operation>
            <value>CQR</value>
        </filters>
        <label>CQR References</label>
    </listViews>
    <nameField>
        <displayFormat>Ref-{000000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <recordTypes>
        <fullName>PT</fullName>
        <active>true</active>
        <description>References for the Performance Technology group of products</description>
        <label>PT</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approval_Status_Reason_Required</fullName>
        <active>true</active>
        <description>Approval Status Reason is Required if Approval Status = Denied or Delayed</description>
        <errorConditionFormula>AND(
  OR(ISPICKVAL( Approval_to_Vet__c , &quot;Denied&quot;),
  ISPICKVAL( Approval_to_Vet__c , &quot;Delayed&quot;)),
  ISBLANK(  Approval_Status_Reason__c  )
)</errorConditionFormula>
        <errorDisplayField>Approval_Status_Reason__c</errorDisplayField>
        <errorMessage>Approval Status Reason is Required if Approval Status = Denied or Delayed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Name_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Contact_Name__c )</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dedicated_Advisor_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Dedicated_Advisor__c )</errorConditionFormula>
        <errorDisplayField>Dedicated_Advisor__c</errorDisplayField>
        <errorMessage>Dedicated Advisor is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Membership_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Membership__c )</errorConditionFormula>
        <errorDisplayField>Membership__c</errorDisplayField>
        <errorMessage>Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NASA_Principal_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISBLANK( NASA_Principal__c ),
  ISPICKVAL( Member_Type__c, &quot;NASA&quot;)
)</errorConditionFormula>
        <errorDisplayField>NASA_Principal__c</errorDisplayField>
        <errorMessage>NASA Principal is required when Member Type is NASA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Projected_Vetting_Date_is_Required</fullName>
        <active>true</active>
        <description>Required when Reference Status = Pending Approval and Reference Level = Pipeline</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Reference_Status__c , &quot;Pending Approval&quot;),
  ISPICKVAL( Reference_Level__c , &quot;Pipeline&quot;) ,
  ISBLANK( Projected_Vetting_Date__c )
)</errorConditionFormula>
        <errorMessage>Projected Vetting Date is required when Reference Status is Pending Approval and Reference Level is Pipeline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Comments_Required</fullName>
        <active>true</active>
        <description>Requires a value if Promotion Status = ‘Declined’</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Promotion_Status__c , &quot;Declined&quot;),
  ISBLANK( Promotion_Comments__c )
)</errorConditionFormula>
        <errorMessage>Promotion Comments Required when Promotion Status = Declined</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reference_Contact_relate_to_Institution</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT( ISBLANK( Contact_Name__c ) ),
  ISBLANK( Contact_Name__r.AccountId )
)</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>Please choose a Contact that is related to an Institution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reference_Module_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Reference_Module__c )</errorConditionFormula>
        <errorMessage>Reference Module is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Reason_Comments_Required</fullName>
        <active>true</active>
        <description>Reason Comments are required when Status Reason = Other</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Status_Reason__c , &quot;Other&quot;),
  ISBLANK( Status_Reason_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Status_Reason_Comments__c</errorDisplayField>
        <errorMessage>Status Reason Comments are required when Status Reason = Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Reason_Required</fullName>
        <active>true</active>
        <description>Require status reason when Reference Status = &quot;Former&quot; OR Promotion Status = &quot;Downgraded&quot;</description>
        <errorConditionFormula>AND(
  OR(
    ISPICKVAL( Reference_Status__c , &quot;Former&quot; ),
    ISPICKVAL( Reference_Status__c , &quot;Unqualified&quot; ),
    ISPICKVAL( Promotion_Status__c , &quot;Downgraded&quot; )
  ),
  ISPICKVAL( Status_Reason__c , &quot;&quot; )
)</errorConditionFormula>
        <errorDisplayField>Status_Reason__c</errorDisplayField>
        <errorMessage>Required when Reference Status = Former or Promotion Status = Downgraded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Validate_Reference_Vetter_Requirednes</fullName>
        <active>true</active>
        <description>If Reference Level = Pipeline and Reference Status = Scheduled then Reference Vetter is required. Created for CR-20160307-9678.</description>
        <errorConditionFormula>AND (
	
	ISBLANK(Reference_Vetter__c),
	
	OR (

		AND (
			ISPICKVAL(Reference_Status__c, &quot;Scheduled&quot;),
			ISPICKVAL(Reference_Level__c, &quot;Pipeline&quot;)
		),

		AND (
			ISPICKVAL(Reference_Status__c, &quot;Vetted&quot;),
			ISPICKVAL(Reference_Level__c, &quot;Pipeline&quot;)
		),

		AND (
			ISPICKVAL(Reference_Status__c, &quot;Vetted&quot;),
			ISPICKVAL(Reference_Level__c, &quot;Gold Standard&quot;)
		),

		AND (
			ISPICKVAL(Reference_Status__c, &quot;Vetted&quot;),
			ISPICKVAL(Reference_Level__c, &quot;Ambassador&quot;)
		)
	)
)</errorConditionFormula>
        <errorDisplayField>Approval_Status_Date__c</errorDisplayField>
        <errorMessage>Reference Vetter is required when a Member is being vetted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vetting_Comments_Required</fullName>
        <active>true</active>
        <description>Required when Reference Status = ‘Vetted’</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Reference_Status__c , &quot;Vetted&quot; ),
  ISBLANK( Vetting_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Vetting_Comments__c</errorDisplayField>
        <errorMessage>Vetting Comments are required when Reference Status = Vetted</errorMessage>
    </validationRules>
</CustomObject>